corrected navbar spacing

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -7,7 +7,6 @@
   padding: 0px 30px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
   font-family: Raleway;
   a {
     text-decoration: none;
@@ -24,6 +23,11 @@
   img {
     height: 50px;
   }
+  strong {
+    padding: 5px 20px;
+  }
+  margin-right: auto;
+  margin-left: auto;
 }
 
 /* Navbar link */
@@ -35,8 +39,10 @@
   text-decoration: none;
 }
 
-// .navbar-right {
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-between;
-// }
+.navbar-right {
+  margin-right: auto;
+  margin-left: auto;
+  a {
+    padding: 5px 20px;
+  }
+}
